force-app/main/default/objects/Batch_Resubmission_Item__c/Batch_Resubmission_Item__c.object-meta.xml
<CustomObject>
    <label>Batch Resubmission Item</label>
    <nameField>
        <label>Batch Resubmission Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Resubmission Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>