force-app/main/default/objects/Batch_Resubmission_Item__c/fields/Batch_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Class_Name__c</fullName>
    <label>Batch Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>