force-app/main/default/objects/Batch_Resubmission_Item__c/fields/Constructor_Params_JSON__c.field-meta.xml
<CustomField>
    <fullName>Constructor_Params_JSON__c</fullName>
    <label>Constructor Params JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>