force-app/main/default/objects/Batch_Resubmission_Item__c/fields/Params_Hash__c.field-meta.xml
<CustomField>
    <fullName>Params_Hash__c</fullName>
    <label>Params Hash</label>
    <length>40</length>
    <type>Text</type>
</CustomField>