force-app/main/default/objects/Batch_Resubmission_Item__c/fields/Target_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Target Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>