force-app/main/default/objects/Batch_Resubmission_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Batch_Class_Name__c</columns>
    <columns>Batch_Job_ID__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Constructor_Params_JSON__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>Params_Hash__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>Target_Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>